--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -5,18 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
-  "keywords": [],
+  "keywords": [
+    "asset compilation",
+    "entry points",
+    "javascript",
+    "loaders",
+    "output",
+    "webpack plugins"
+  ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
-    "webpack": "^5.104.1",
-    "webpack-cli": "^6.0.1"
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
-    "lodash": "^4.17.21"
+    "jquery": "^3.6.0",
+    "task_0": "file:"
   }
 }
