--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -19,11 +19,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.104.1",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "jquery": "^3.6.0",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "task_0": "file:"
   }
 }
