--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -23,8 +23,6 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
-    "lodash": "^4.17.21",
-    "task_0": "file:"
+    "jquery": "^3.7.1"
   }
 }
