--- a/Webpack/task_3/package.json
+++ b/Webpack/task_3/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start-dev": "webpack serve"
+    "start-dev": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,7 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "jquery": "^3.7.1",
