--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./task_3/dashboard   # path to dashboard folder
+          publish_dir: ./react_intro/task_3/dashboard   # path to dashboard folder
