--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,28 @@ name: Deploy Dashboard to GitHub Pages
 on:
   push:
     branches:
-      - main   # or default branch
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Deploy dashboard folder
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install --prefix react_intro/task_3/dashboard
+
+      - name: Build project
+        run: npm run build --prefix react_intro/task_3/dashboard
+
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./react_intro/task_3/dashboard   # path to dashboard folder
+          publish_dir: ./react_intro/task_3/dashboard/build
