--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "jest": {
     "testEnvironment": "jsdom",
+    "forceExit": true,
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
     ],
