--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -5,8 +5,14 @@
   "main": "./src/index.js",
   "jest": {
     "testEnvironment": "jsdom",
+    "forceExit": true,
+    "maxWorkers": 1,
+    "testTimeout": 5000,
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/config/setupTestsAfterEnv.js"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetMock.js",
