--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -5,9 +5,7 @@
   "main": "./src/index.js",
   "jest": {
     "testEnvironment": "jsdom",
-    "maxWorkers": 1,
     "testTimeout": 5000,
-    "bail": 1,
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
     ],
@@ -23,7 +21,7 @@
     "build": "webpack --config ./config/webpack.config.js",
     "start-dev": "webpack serve -c ./config/webpack.config.js --open",
     "start": "webpack serve -c ./config/webpack.config.js --open",
-    "test": "jest --forceExit",
+    "test": "jest --runInBand --forceExit",
     "dev": "npm run start-dev -- --env mode=development",
     "prod": "npm run start-dev -- --env mode=production"
   },
