--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -37,12 +37,12 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "1.0.0-rc.12",
     "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "5.3.2",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.3.1",
     "react-hot-loader": "^4.13.0",
