--- a/React_inline_styling/task_1/dashboard/package.json
+++ b/React_inline_styling/task_1/dashboard/package.json
@@ -32,6 +32,7 @@
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@types/minimatch": "^5.1.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
