--- a/React_inline_styling/task_1/dashboard/package.json
+++ b/React_inline_styling/task_1/dashboard/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@babel/runtime": "^7.28.6",
     "aphrodite": "^2.4.0",
+    "minimatch": "^10.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
