--- a/react_state/task_0/dashboard/package.json
+++ b/react_state/task_0/dashboard/package.json
@@ -17,16 +17,9 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
-    "jest": "^26.6.3",
+    "cheerio": "1.0.0-rc.10",
     "react-test-renderer": "^16.14.0",
     "identity-obj-proxy": "^3.0.0",
-    "babel-jest": "^26.6.3",
     "react-scripts": "^3.4.4"
-  },
-  "jest": {
-    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
-    "moduleNameMapper": {
-      "\\\\.(css|less|scss)$": "identity-obj-proxy"
-    }
   }
 }
